--- a/config/config.ini
+++ b/config/config.ini
@@ -2,3 +2,8 @@ port=8080
 root=C:\Users\orbrand21\workspace\WebCrawler\
 defaultPage=index.html
 maxThreads=10
+maxDownloaders=10
+maxAnalyzers=2
+imageExtensions=bmp, jpg, png, gif, ico
+videoExtensions=avi,mpg, mp4, wmv, mov, flv, swf, mkv
+documentExtensions=pdf, doc, docx, xls, xlsx, ppt, pptx
