--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 port=8080
-root=C:\Users\orbrand21\workspace\WebCrawler\
+root=C:\Users\doris\Desktop\School Work\Computer Networks\WebCrawler\
 defaultPage=index.html
 maxThreads=10
 maxDownloaders=10
