--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="dsn.jar"/>
-	<classpathentry kind="lib" path="imap.jar"/>
-	<classpathentry kind="lib" path="mailapi.jar"/>
-	<classpathentry kind="lib" path="pop3.jar"/>
-	<classpathentry kind="lib" path="smtp.jar"/>
+	<classpathentry kind="lib" path="jars/dsn.jar"/>
+	<classpathentry kind="lib" path="jars/imap.jar"/>
+	<classpathentry kind="lib" path="jars/mailapi.jar"/>
+	<classpathentry kind="lib" path="jars/pop3.jar"/>
+	<classpathentry kind="lib" path="jars/smtp.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
